k8s/plausible-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      restartPolicy: Always
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: plausible
          image: $PLAUSIBLE_IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
            capabilities:
              drop:
              - ALL
          resources:
            limits:
              memory: 1000Mi
            requests:
              memory: 1000Mi
              cpu: 100m
          # needed to comment out the probes last time to get it to deploy - turned out to need longer delay for liveness
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 35
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
