k8s/plausible-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
spec:
  type: ClusterIP
  ports:
    - port: 8000
      name: http
