k8s/plausible-server/ingress.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: plausible
spec:
  parentRefs:
  - kind: Gateway
    name: shared-gateway
    namespace: ingress
  hostnames:
  - plausible.alexos.dev
  rules:
  - backendRefs:
    - name: plausible
      port: 8000
